Fix Bug#11333 "Stored Procedure: Memory blow up on repeated SELECT ... INTO query"